examples/v0.2/errors/invalid_logical_operand.nova
// Expected Error:
// Left operand must be boolean.

print(5 && true)